fix mobile spacing

--- a/src/app/[lng]/components/Masthead/Masthead.module.scss
+++ b/src/app/[lng]/components/Masthead/Masthead.module.scss
@@ -70,7 +70,11 @@
   border-block: 1px solid transparent;
   background-color: #4c15bb;
   border-radius: 0;
-  padding-inline: 5rem;
+  padding-inline: 3rem;
+
+  @include mq(tablet) {
+    padding-inline: 5rem;
+  }
 }
 
 @keyframes cta {
